tests/NormalTests/paczka1/fuzzy1/21108046.err
Error in line 2: A506 S233 3,3
Error in line 10: 3U6LeNHxwG S233 84,6
Error in line 13: 3U6LeNHxwG S97 39,1
Error in line 23: soef A506 60,0
Error in line 20: x9mP S97 53,5
Error in line 33: oggmjJvSn S792 -1,4
Error in line 37: soef A506 92,5
